--- a/monkei/mainpage/templates/main/template.html
+++ b/monkei/mainpage/templates/main/template.html
@@ -1,10 +1,23 @@
 <!doctype html>
+{% load static %}
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="{% static 'css/arquivo.css' %}" type="text/css" rel="stylesheet">
+<header class="p-3 bg-dark text-white">
+    <div class="container">
+      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+        <div>
+          <a href='' class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+            {% load static %} <img src="{% static 'media/monkey-logo.png' %}"alt="logo" id="logo"/>
 
+          </a>
+        </div>
+      </div>
+    </div>
+  </header>
     {% block title %}
     {% endblock title%}
   </head>
