--- a/monkei/mainpage/templates/main/about.html
+++ b/monkei/mainpage/templates/main/about.html
@@ -1,12 +1,8 @@
 {%extends 'main/template.html'%}
 {% block title%}
-<title>home</title>
+<title>About</title>
 {% endblock title%}
 {%block content%}
-<h1>liju8buhb oh</h1>
-{% if user.is_authenticated %}
-    <h1> vai te toma no cu</h1>
-{% else %}
+<h1>gau oh</h1>
 <a href='/login/?next={{ request.path }}'>Login</a>
-{% endif %}
 {% endblock content%}
