--- a/monkei/mainpage/static/css/arquivo.css
+++ b/monkei/mainpage/static/css/arquivo.css
@@ -2,3 +2,45 @@
     width:45px;
     height:44px;
 }
+#about{
+     width:45px;
+    height:44px;
+}
+h1{
+color: #32a852;
+margin-top:30px;
+}
+
+button{
+    cursor: pointer;
+    border: 1px solid #555;
+    text-align: center;
+    padding: 5px;
+    margin-left: 8px;
+}
+.dark-mode{
+    background-color: #222;
+    color: #e6e6e6;
+}
+
+* {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+  background: var(--bkg-color);
+}
+
+h1,
+p {
+  color: var(--text-color);
+}
+button { border:none  }
+.btn-size img {
+    width: 45px;
+    height: 44px;
+
+}
+.color{
+color:#8b8c86!important;
+}
