--- a/monkei/mainpage/templates/main/template.html
+++ b/monkei/mainpage/templates/main/template.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="{% static 'css/arquivo.css' %}" type="text/css" rel="stylesheet">
 <header class="p-3 bg-dark text-white">
+  <a href='/login/?next={{ request.path }}'>Login</a>
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         <div>
