--- a/monkei/mainpage/templates/main/main.html
+++ b/monkei/mainpage/templates/main/main.html
@@ -4,6 +4,23 @@
 {% endblock title%}
 {%block content%}
 <h1>liju8buhb oh</h1>
+
+{% for post in posts %}
+    <div class="post">
+        <a id="container-link" href="{{post.post_link}}">
+            <div class='container' >
+                <div><h3>{{post.title}}</h3></div>
+                <div><p class="date fw-light">{{post.date}}</p></div>
+                <div class="overflow-hidden p-3 bg-light" id='body_content'><p>{{post.content}}</p></div>
+            </div>
+        </a>
+       <img src="{{ post.image.url}}" alt="connect" style="max-height:300px">
+        {{post.author}}
+        {{post.file}}
+    </div>
+    {% empty %}
+        <h1> Still No Posts</h1>
+    {% endfor %}
 {% if user.is_authenticated %}
     <h1> vai te toma no cu</h1>
 {% else %}
